--- a/support/static/ngTemplates/app.company.html
+++ b/support/static/ngTemplates/app.company.html
@@ -25,7 +25,7 @@
           <i ng-if="tab.cancel" class="fa fa-close" style="padding:2px" ng-click="closeTab($index);"></i>
         </uib-tab-heading>
         <div ng-if="tab.app == 'companyEdit'">
-          <div ng-include="'/static/ngTemplates/app.customers.form.html'"></div>
+          <div ng-include="'/static/ngTemplates/app.company.explore.html'"></div>
         </div>
         <div ng-if="tab.app == 'companyInfo'">
           <div ng-include="'/static/ngTemplates/app.customers.explore.html'"></div>
