--- a/support/static/ngTemplates/app.support.html
+++ b/support/static/ngTemplates/app.support.html
@@ -1,5 +1,5 @@
 <!-- <div class=" bg-white" style="min-height:93vh;position:relative;"> -->
-  <div class="container-fluid" id="chatTab">
+  <div class="container-fluid" id="chatTab" style="overflow:hidden">
     <div class="row" style="background-color: white;">
 
       <!-- middle part -->
