--- a/homepage/static/ngTemplates/accountsDetails.html
+++ b/homepage/static/ngTemplates/accountsDetails.html
@@ -65,7 +65,7 @@
             <p> <b> Topic :</b> {{sess.topic.title}}</p>
           </div>
           <div class="col-md-3">
-            <p> <b> Tutor :</b> {{sess.tutor | getName}}</p>
+            <p> <b> Tutor :</b> {{sess.tutor}}</p>
           </div>
           <div class="col-md-2" style="padding-right:0px">
             <p> <b> Duration :</b> {{sess.duration}}</p>
@@ -89,7 +89,7 @@
           </div>
         </div>
         <div class="row text-center">
-          <p style="font-size:20px; font-weight:700; color: #414142; margin:10px 0px;">{{me.pk | getName}}</p>
+          <p style="font-size:20px; font-weight:700; color: #414142; margin:10px 0px;">{{me.first_name}}</p>
         </div>
         <div class="row">
           <div class="col-md-12">
