--- a/support/static/ngTemplates/app.sessionHistory.html
+++ b/support/static/ngTemplates/app.sessionHistory.html
@@ -29,21 +29,21 @@
                             </thead>
                            <tbody>
                            <tr id="id{{$index}}" ng-repeat="data in reviewData" ng-click="tabelRowAction(data)" style="background-color: {{$index==lastActiveTR?'#f0f0f0':' '}}">
-                             <td class="tabel_data" style="height:7rem" >
+                             <td class="tabel_data" style="height:10vh">
                                 <img class="table_image" ng-if="data.user_id" src="{{data.user_id | getDP}}" alt="">
                                 <img class="table_image" ng-if="!data.user_id" ng-src="/static/images/avatar04.png" alt="">
                                 <span style="display:inline-block">
-                                   <div ng-if="data.name">
-                                     <span style="font-weight: 500;font-size:90%">{{data.name}}</span>
-
-                                   </div>
-                                   <span style="font-size:83%">{{data.uid}}</span>
+                                   <span ng-if="!data.Vname" style="font-size:83%">{{data.uid}}</span>
+                                   <span ng-if="data.Vname" style="font-size:83%">{{data.Vname}}</span>
                                    <span ng-if="data.isLate" style="color:#C83737;font-size:75%">-Late</span>
                                    <div>
-                                     <span ng-if="data.chatDuration>0.0" style="font-size:90%"><i class="fa fa-clock-o" aria-hidden="true"></i>  {{data.chatDuration}} Min</span>
+                                     <span ng-if="data.chatDuration>0.0" style="font-size:80%"><i class="fa fa-clock-o" aria-hidden="true"></i>  {{data.chatDuration}} Min</span>
                                    </div>
                                    <div class="tabel_dataStatus" style="font-size:80%">
-                                     <span style="background:#fff;" ><i class="fa fa-calendar-o" aria-hidden="true"></i> {{data.created|  date : 'dd-MMM-yyyy'}}</span>
+                                     <span style="background:#fff;" ><i class="fa fa-calendar-o" aria-hidden="true"></i> {{data.created|  date : 'dd-MMM-yyyy'}}  {{data.created | date : 'hh:mm:a' }}</span>
+                                   </div>
+                                   <div ng-if="data.location.city">
+                                     <span style="font-size:80%"><i class="fa fa-globe" aria-hidden="true"></i> {{data.location.city}} , {{data.location.country_name}}</span>
                                    </div>
                                  </span>
                                  <span style="float:right;opacity:0.6;padding:5px;text-align:center">
@@ -51,18 +51,16 @@
                                    <i ng-if="data.typ=='video'" class="fa fa-video-camera fa-md" aria-hidden="true"></i>
                                    <i ng-if="data.typ!='video'&&data.typ!='audio'" class="fa fa-commenting-o fa-md" aria-hidden="true"></i>
                                    <div class="tabel_dataStatus" style="font-size:80%">
-                                     <span ng-if="data.status=='late'&&data.user_id" style="color:green"><b>{{data.status|humanize}}</b></span>
-                                     <span ng-if="data.status=='started'&&data.user_id" style="color:green"><b>{{data.status|humanize}}</b></span>
-                                     <span ng-if="data.status=='closed'&&data.user_id" style="color:#A40B0B"><b>{{data.status|humanize}}</b></span>
-                                     <span ng-if="data.status=='reviewed'&&data.user_id" style="color:brown"><b>{{data.status|humanize}}</b></span>
-                                     <span ng-if="data.status=='resolved'&&data.user_id" style="color:#FF8C00"><b>{{data.status|humanize}}</b></span>
-                                     <span ng-if="!data.user_id" style="color:#F90000"><b>Missed</b></span>
+                                     <span ng-if="data.status=='closed'" style="color:#111BE3">{{data.status|humanize}}</span>
+                                     <span ng-if="data.status=='reviewed'" style="color:brown">{{data.status|humanize}}</span>
+                                     <span ng-if="data.status=='resolved'" style="color:#FF8C00">{{data.status|humanize}}</span>
+                                     <span ng-if="data.status=='missed'" style="color:#F90000">Missed</span>
                                   </div>
-                                  <div ng-if="data.chatDuration>0.0">
-                                    <span ng-if="data.customerRating<=3&&data.customerRating" style="font-size:80%;margin-right:1rem;padding: .1rem 1rem;color:red">{{data.customerRating}}
+                                  <div>
+                                    <span ng-if="data.customerRating<=3&&data.customerRating" style="font-size:80%;color:red">{{data.customerRating}}
                                     <i class="fa fa-star fa-md" aria-hidden="true"></i>
                                    </span>
-                                    <span ng-if="data.customerRating>3" style="font-size:80%;margin-right:1rem;padding: .1rem 1rem;color:green">{{data.customerRating}}
+                                    <span ng-if="data.customerRating>3" style="font-size:80%;color:green">{{data.customerRating}}
                                         <i class="fa fa-star fa-md" aria-hidden="true"></i>
                                    </span>
                                   </div>
@@ -300,20 +298,21 @@
                           </thead>
                          <tbody>
                          <tr id="id{{$index}}" ng-repeat="data in archivedData" ng-click="tabelRowActionArch(data)" style="background-color: {{$index==lastActiveTRArch?'#f0f0f0':' '}}">
-                           <td class="tabel_data" style="height:7rem" >
+                           <td class="tabel_data" style="height:10vh">
                               <img class="table_image" ng-if="data.user_id" src="{{data.user_id | getDP}}" alt="">
                               <img class="table_image" ng-if="!data.user_id" ng-src="/static/images/avatar04.png" alt="">
                               <span style="display:inline-block">
-                                 <div ng-if="data.name">
-                                   <span style="font-weight: 500;font-size:90%">{{data.name}}</span>
-                                 </div>
-                                 <span style="font-size:83%">{{data.uid}}</span>
+                                 <span ng-if="!data.Vname" style="font-size:83%">{{data.uid}}</span>
+                                 <span ng-if="data.Vname" style="font-size:83%">{{data.Vname}}</span>
                                  <span ng-if="data.isLate" style="color:#C83737;font-size:75%">-Late</span>
                                  <div>
-                                   <span ng-if="data.chatDuration>0.0" style="font-size:90%"><i class="fa fa-clock-o" aria-hidden="true"></i>  {{data.chatDuration}} Min</span>
+                                   <span ng-if="data.chatDuration>0.0" style="font-size:80%"><i class="fa fa-clock-o" aria-hidden="true"></i>  {{data.chatDuration}} Min</span>
                                  </div>
                                  <div class="tabel_dataStatus" style="font-size:80%">
-                                   <span style="background:#fff;" ><i class="fa fa-calendar-o" aria-hidden="true"></i> {{data.created|  date : 'dd-MMM-yyyy'}}</span>
+                                   <span style="background:#fff;" ><i class="fa fa-calendar-o" aria-hidden="true"></i> {{data.created|  date : 'dd-MMM-yyyy'}}  {{data.created | date : 'hh:mm:a' }}</span>
+                                 </div>
+                                 <div ng-if="data.location.city">
+                                   <span style="font-size:80%"><i class="fa fa-globe" aria-hidden="true"></i> {{data.location.city}} , {{data.location.country_name}}</span>
                                  </div>
                                </span>
                                <span style="float:right;opacity:0.6;padding:5px;text-align:center">
@@ -321,18 +320,16 @@
                                  <i ng-if="data.typ=='video'" class="fa fa-video-camera fa-md" aria-hidden="true"></i>
                                  <i ng-if="data.typ!='video'&&data.typ!='audio'" class="fa fa-commenting-o fa-md" aria-hidden="true"></i>
                                  <div class="tabel_dataStatus" style="font-size:80%">
-
-                                   <span ng-if="data.status=='started'" style="color:green"><b>{{data.status|humanize}}</b></span>
-                                   <span ng-if="data.status=='closed'" style="color:#A40B0B"><b>{{data.status|humanize}}</b></span>
-                                   <span ng-if="data.status=='reviewed'" style="color:brown"><b>{{data.status|humanize}}</b></span>
-                                   <span ng-if="data.status=='resolved'" style="color:#FF8C00"><b>{{data.status|humanize}}</b></span>
-                                   <span ng-if="data.status=='missed'" style="color:#F90000"><b>Missed</b></span>
+                                   <span ng-if="data.status=='closed'" style="color:#111BE3">{{data.status|humanize}}</span>
+                                   <span ng-if="data.status=='reviewed'" style="color:brown">{{data.status|humanize}}</span>
+                                   <span ng-if="data.status=='resolved'" style="color:#FF8C00">{{data.status|humanize}}</span>
+                                   <span ng-if="data.status=='missed'" style="color:#F90000">Missed</span>
                                 </div>
-                                <div class="">
-                                  <span ng-if="data.customerRating<=3&&data.customerRating" style="font-size:80%;margin-right:1rem;padding: .1rem 1rem;color:red">{{data.customerRating}}
+                                <div>
+                                  <span ng-if="data.customerRating<=3&&data.customerRating" style="font-size:80%;color:red">{{data.customerRating}}
                                   <i class="fa fa-star fa-md" aria-hidden="true"></i>
                                  </span>
-                                  <span ng-if="data.customerRating>3" style="font-size:80%;margin-right:1rem;padding: .1rem 1rem;color:green">{{data.customerRating}}
+                                  <span ng-if="data.customerRating>3" style="font-size:80%;color:green">{{data.customerRating}}
                                       <i class="fa fa-star fa-md" aria-hidden="true"></i>
                                  </span>
                                 </div>
