--- a/static_root/ngTemplates/app.support.html
+++ b/static_root/ngTemplates/app.support.html
@@ -1,9 +1,9 @@
 <!-- <div class=" bg-white" style="min-height:93vh;position:relative;"> -->
-  <div class="container-fluid" id="chatTab">
+  <div class="container-fluid" id="chatTab" style="overflow:hidden">
     <div class="row" style="background-color: white;">
 
       <!-- middle part -->
-       <div class="col-md-10" style="padding:0px; min-height:92vh;">
+       <div class="col-md-10" style="padding:0px; min-height:92vh;width:85%">
         <div class="col-md-3 anim-in-out anim-fade" style="width:24%;padding:0px;height:92vh;border-right:2px #eeeeee solid;" ng-repeat="cust in chatsInView">
           <chat-box data = "cust" index="$index" id="chatBox{{cust.uid}}" close-chat="closeChatBox" webRtcAddress = "webRtcAddress" ></chat-box>
         </div>
@@ -36,7 +36,7 @@
                         <span ng-if="!x.boxOpen && x.unreadMsg>0" >( {{x.unreadMsg}} )</span>
                         <span ng-if="x.video&&!x.closeIframe"><i class="fa fa-video-camera" aria-hidden="true"></i></span>
                         <span ng-if="x.audio&&!x.closeIframe"><i class="fa fa-volume-up" aria-hidden="true"></i></span>
-                        <i style="padding:2px" ng-if="!x.isOnline" class="fa fa-times fa-lg pull-right" ng-click="chatClose($index,x.chatThreadPk);"></i>
+                        <!-- <i style="padding:2px" ng-if="!x.isOnline" class="fa fa-times fa-lg pull-right" ng-click="chatClose($index,x.chatThreadPk);"></i> -->
                       </div>
                     </div>
                     <!-- <div class="col-xs-2">
@@ -69,7 +69,9 @@
                   <div class="container-fluid">
                     <div class="col-xs-12">
                       <div class="row">
-                        <i class="fa fa-circle" aria-hidden="true" style="color:{{x.isOnline ? '#37a508':'#ff0022'}}"></i><span> {{x.uid}} </span>
+                        <i class="fa fa-circle" aria-hidden="true" style="color:{{x.isOnline ? '#37a508':'#ff0022'}}"></i>
+                        <span ng-if="x.name" >{{x.name}}</span>
+                        <span ng-if="!x.name" >{{x.uid}}</span>
                         <span ng-if="x.messages.length>0">( {{x.messages.length}} )</span>
                         <span ng-if="x.video"><i class="fa fa-video-camera" aria-hidden="true"></i></span>
                       </div>
