--- a/finance/static/ngTemplates/app.finance.inflow.invoicing.item.html
+++ b/finance/static/ngTemplates/app.finance.inflow.invoicing.item.html
@@ -4,9 +4,9 @@
       <div class="col-md-2" style="padding-right:0px">
         <i class="fa fa-file-text-o"></i> <strong>Id</strong>
       </div>
-      <div class="col-md-2">
+      <!-- <div class="col-md-2">
         <strong>Dated</strong>
-      </div>
+      </div> -->
       <!-- <div class="col-md-2" style="padding-right:0px">
         <strong>Total</strong>
       </div> -->
@@ -26,9 +26,9 @@
       <div class="col-md-2" style="padding-right:0px">
         {{data.pk}}
       </div>
-      <div class="col-md-2">
+      <!-- <div class="col-md-2">
         {{data.created | date :"dd-MMM-yyyy"}}
-      </div>
+      </div> -->
       <div class="col-md-2">
         {{data.total- data.tax}}
       </div>
