--- a/finance/static/ngTemplates/app.finance.inflow.crm.item.html
+++ b/finance/static/ngTemplates/app.finance.inflow.crm.item.html
@@ -22,7 +22,7 @@
 
     <div class="row">
       <div class="col-md-2" style="padding-right:0px">
-        {{data.pk}}
+        CRM0{{data.pk}}
       </div>
       <div class="col-md-2">
         {{data.recievedDate | date :"dd-MMM-yyyy"}}
