--- a/finance/static/ngTemplates/app.finance.inflow.invoicing.item.html
+++ b/finance/static/ngTemplates/app.finance.inflow.invoicing.item.html
@@ -24,7 +24,7 @@
 
     <div class="row">
       <div class="col-md-2" style="padding-right:0px">
-        {{data.pk}}
+        INV0{{data.pk}}
       </div>
       <!-- <div class="col-md-2">
         {{data.created | date :"dd-MMM-yyyy"}}
