--- a/support/static/ngTemplates/app.customers.explore.dynamicForms.html
+++ b/support/static/ngTemplates/app.customers.explore.dynamicForms.html
@@ -16,11 +16,12 @@
   <div class="row">
     <div class="col-md-4">
       <div class="row" style="border-right:solid 2px #e0e0e0;min-height:54vh;position:relative;" ng-if="dynamicForm.length>0">
-        <div class="row container-fluid card" ng-repeat="d in dynamicForm" ng-click="setForm($index)" style="cursor:pointer;margin:10px ;padding:15px; height:80px; border-radius:4px; box-shadow:none; {{newForm.pk==d.pk?'background-color:#009efb ; color:white':'background-color: #e9e9e9 !important;'}}">
+        <div class="row container-fluid card" ng-repeat="d in dynamicForm" ng-click="setForm($index)" style="position:relative;cursor:pointer;margin:10px ;padding:15px; height:80px; border-radius:4px; box-shadow:none; {{newForm.pk==d.pk?'background-color:#009efb ; color:white':'background-color: #e9e9e9 !important;'}}">
           <div style="font-size:20px;padding:10px;margin-top:-17px;margin-left:-10px;opacity:0.9;margin-bottom:7px"><b>{{d.form_name}}</b></div>
           <ul style="list-style:none;margin-bottom:-10px;font-size:12px;opacity:0.7;" class="list-inline">
             <li>Last modified:<b> {{d.updated  | date:'dd-MMM-yyyy'}}</b></li>
           </ul>
+          <span mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="deleteForm($index);" confirm-button-type="danger" cancel-button-type="default" style="position:absolute; right:15px; bottom:15px;"><i ng-click="" class="fa fa-trash"></i></span>
         </div>
       </div>
     </div>
@@ -42,22 +43,32 @@
 
       <div class="row"  style="padding:15px 10px;" ng-if="newForm.fields.length>0">
         <h5 style="padding-left:15px;"> <b>Fields: </b> </h5>
-        <div class="col-md-3" ng-repeat="f in newForm.fields track by $index">
+        <div class="col-md-3" ng-repeat="f in newForm.fields track by $index" style="margin-bottom:10px;">
           <div class="card" style="padding:15px; position:relative;">
             {{f.field_name}}
             <i ng-click="deleteDynamicField(f.pk, $index)" style="position:absolute; right:8px; bottom:8px;" class="fa fa-trash"></i>
+              <i ng-click="editDynamicField(f.pk, $index)" style="position:absolute; right:8px; top:4px;" class="fa fa-pencil"></i>
           </div>
         </div>
       </div>
 
       <div class="row" ng-if="newForm.pk">
+        <div class="col-md-1">
+          <div class="form-group">
+            <label for="">Required?</label>
+            <div class="checkbox">
+              <input style="margin-left:20px;" type="checkbox" ng-model="fieldForm.is_required" id="" placeholder="Field Name">
+          </div>
+
+          </div>
+        </div>
         <div class="col-md-3">
           <div class="form-group">
             <label for="">Field Name</label>
             <input type="text" class="form-control" ng-model="fieldForm.field_name" id="" placeholder="Field Name">
           </div>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-3">
           <div class="form-group">
             <label for="">Field Type</label>
             <select class="form-control" ng-model="fieldForm.field_typ" id="sel1">
@@ -67,21 +78,24 @@
             </select>
           </div>
         </div>
-        <div class="col-md-3" ng-if="fieldForm.field_typ!='text'">
+        <div class="col-md-2" ng-if="fieldForm.field_typ!='text'">
           <div class="form-group">
             <label for="">Field Parameters</label>
             <input type="text" class="form-control" ng-model="fieldForm.parameters" id="" placeholder="parameters">
           </div>
         </div>
-        <div class="col-md-3" ng-if="fieldForm.field_typ=='typeahead'">
+        <div class="col-md-2" ng-if="fieldForm.field_typ=='typeahead'">
           <div class="form-group">
-            <label for="">Field Key {{fieldForm.field_name}}</label>
-            <input type="text" class="form-control" ng-model="fieldForm.parameters" id="" placeholder="key">
+            <label for="">Field Key </label>
+            <input type="text" class="form-control" ng-model="fieldForm.key" id="" placeholder="key">
           </div>
         </div>
         <div class="col-md-1">
-          <button type="button" class="btn btn-default pull-right" style="margin-top:24px;" ng-click="addFields()">
+          <button ng-if="fieldForm.pk == undefined" type="button" class="btn btn-default pull-right" style="margin-top:24px;" ng-click="addFields()">
             Add
+          </button>
+          <button ng-if="fieldForm.pk" type="button" class="btn btn-default pull-right" style="margin-top:24px;" ng-click="editFields()">
+            Save
           </button>
         </div>
       </div>
